--- a/.golangci.yml
+++ b/.golangci.yml
@@ -82,4 +82,5 @@ issues:
     - "don't use underscores in Go names; method Disable_port"
     - "don't use underscores in Go names; method Enable_port"
     - "don't use underscores in Go names; method Child_device_lost"
+    - "don't use underscores in Go names; method Start_omci_test"
   exclude-use-default: false
