[VOL-2975] Changes to OpenOLT adapter for supporting multi-tcont
Change-Id: If7d6cf8aabce10d0a4e0e03794c44ac8b1e9981b

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -83,4 +83,5 @@ issues:
     - "don't use underscores in Go names; method Enable_port"
     - "don't use underscores in Go names; method Child_device_lost"
     - "don't use underscores in Go names; method Start_omci_test"
+    - "don't use underscores in Go names; method Get_ext_value"
   exclude-use-default: false
