VOL-3735 Retrieve port counters using the GetExtValue(SingleGetValue) rpc from the openolt adapter
Change-Id: I195f7c9fdc4b677c333ae9e4bb3547bb95312fdf

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -83,4 +83,5 @@ issues:
     - "don't use underscores in Go names; method Child_device_lost"
     - "don't use underscores in Go names; method Start_omci_test"
     - "don't use underscores in Go names; method Get_ext_value"
+    - "don't use underscores in Go names; method Single_get_value_request"
   exclude-use-default: false
